# fuel_low_level_contract_calling_testing

./: 0_build_contracts.sh  1_deploy_contracts.sh  Cargo.toml  README.md  fuel-toolchain.toml
contracts/caller/: Forc.toml
contracts/caller/src/: main.sw
contracts/targetcontract/: Forc.toml
contracts/targetcontract/src/: main.sw
tests/: harness.rs
